# berbl

./: .gitignore  404.html  CITATION.cff  README.md  default.nix  flake.nix  gen_ref_pages.py  get-results-and-serve  index.html  mkdocs.yml  objects.inv  setup.cfg  setup.py  shell.nix  sitemap.xml  test  tox.ini
docs/: index.md
docs/API/: BERBL.md
docs/examples/: identity_function.py  identity_function_defaults.py
reference/SUMMARY/: index.html
reference/berbl/: index.html
reference/berbl/literal/: index.html
reference/berbl/match/: index.html
reference/berbl/mixing/: index.html
reference/berbl/mixing_laplace/: index.html
search/: search_index.json
slurm/: generated_function.sbatch  job1.sbatch  linear-generated_function_random_search.sbatch  noisy_sinus.sbatch  runexp.py  sparse_noisy_data.sbatch  test-determinism.sbatch  variable_noise.sbatch
src/berbl/: __init__.py  classifier.py  mixing.py  mixing_laplace.py  mixture.py  rule.py  utils.py
src/berbl/literal/: __init__.py  (+2 more)
src/examples/: identity_function.py
src/prolcs/: __init__.py  allmatch.py  common.py  logging.py  mixing.py  mixture.py  nomatch.py  radialmatch.py  radialmatch1d.py  unneeded.py  utils.py
src/utils/: normal_hand_vs_scipy.py  profile.py
test/: test_misc.py  test_prolcs.py  test_prolcs_unneeded.py
tests/prolcs/: test_utils.py
tests/test_berbl/: __init__.py  test_classifier.py  test_mixing.py  test_mixing_laplace.py  test_mixture.py  test_rule.py  test_utils.py
tests/test_prolcs/: __init__.py  test_classifier.py  test_mixing.py  test_mixing_laplace.py  test_utils.py
(+112 files in other folders)
