[metadata]
name = berbl
version = 0.1.0
author = berbl
author_email = berbl@berbl.berbl
description = Bayesian Evolutionary Rule-based Learner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmp-berbl/berbl
project_urls =
    Bug Tracker = https://github.com/tmp-berbl/berbl/issues
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
install_requires =
    deap ==1.3.1
    mlflow ==1.22.0
    numpy ==1.21.2
    scipy ==1.7.1
    scikit-learn ==0.24.1
tests_require =
    hypothesis
    pytest

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
